tests/lean/multiConstantError.lean
constant a b c : Nat

constant a α β : β → Bool
